--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -37,7 +37,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn4" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_UserOpenForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow3">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn6" class="col-xs-3">
@@ -52,7 +52,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_UserClosedForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow4">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn8" class="col-xs-3">
